Organization of the links
New links for viewing source.
Opening the links in a new tab.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2089,6 +2089,7 @@ input, select, textarea {
 		text-decoration: none;
 		text-transform: uppercase;
 		white-space: nowrap;
+		min-width: 135.77px;
 	}
 
 		input[type="submit"].icon:before,
